<resources>
    <string name="app_name">Attendance</string>
    <string name="admin">Admin</string>
    <string name="teacher">Teacher</string>
    <string name="children">Student</string>
    <string name="who_are_you">Who are you?</string>
    <string name="proceed">Proceed</string>
    <string name="title_activity_admin_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="admin_login_page">Admin Login Page</string>
    <string name="enter_your_email_id">Enter Your Email-Id</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="teacher_login_page">Teacher Login Page</string>
    <string name="check_your_attendance">Check Your Attendance</string>
    <string name="enter_your_usn">Enter Your USN</string>
    <string name="my_attendance">My Attendance</string>
    <string name="add_teacher_account">Add Teacher Account</string>
    <string name="delete_teacher_account">Delete Teacher Account</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email_id">Enter Email-Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_teacher_account">Create Teacher Account</string>
    <string name="your_name">Your Name</string>
    <string name="add">Add</string>
    <string name="semester">Semester:</string>
    <string name="subject">Subject:</string>
    <string name="add_student">Add Student</string>
    <string name="of_which_class">Of Which Class?</string>
    <string name="branch2">Branch:</string>
    <string name="branchs">Branch?</string>
    <string name="class1">Class?</string>
    <string name="add_details1">Add Details</string>
    <string name="teacher_type1">Teacher Type</string>
    <string name="names">Name</string>
    <string name="usn1">USN</string>
    <string name="phone_number1">Phone Number</string>
    <string name="parent_number">Parent Number</string>
    <string name="email_id2">Email-Id</string>
    <string name="add_student_details">Add Student Details</string>
    <string name="done1">Done</string>
    <string name="enter_student_email_id">Enter Student Email-Id</string>
    <string name="enter_parent_number">Enter Parent Number</string>
    <string name="enter_student_number">Enter Student Number</string>
    <string name="enter_student_usn">Enter Student USN</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="student_list1">Student List</string>
    <string name="class_teacher1">Class Teacher:</string>
    <string name="subjects_handling3">Subjects Handling:</string>
    <string name="textview">TextView</string>
    <string name="branch">Branch:</string>
    <string name="semester2">Semester:</string>
    <string name="class3">Class:</string>
    <string name="no_data_entered5">No Data Entered</string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="stats">Stats</string>
    <string name="total_days1">Total Days:</string>
    <string name="days_present2">Days Present:</string>
    <string name="percentage43">Percentage:</string>
    <string name="absent_on4">Absent On:</string>
    <string name="add_days">Add Days</string>
    <string name="confirm_changes">Confirm Change</string>
    <string name="change_value3">Change Value</string>
    <string name="send_sms2">Send SMS</string>
    <string name="refresh3">Refresh</string>
    <string name="upload_files">Upload Files</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_notification">Send Notification</string>
    <string-array name="spinner_branches">
        <item>
            Civil Engineering
        </item>
        <item>
            Computer Science Engineering
        </item>
        <item>
            Electrical &amp; Electronics Engineering
        </item>
        <item>
            Electronics &amp; Communication Engineering
        </item>
        <item>
            Information Science &amp; Engineering
        </item>
        <item>
            Mechanical Engineering
        </item>
    </string-array>
    <string-array name="spinner_semesters">
        <item>
            Semester 1 &amp; 2
        </item>
        <item>
            Semester 3
        </item>
        <item>
            Semester 4
        </item>
        <item>
            Semester 5
        </item>
        <item>
            Semester 6
        </item>
    </string-array>
    <string-array name="spinner_teacher_type">
        <item>
            Subject Teacher
        </item>
        <item>
            Class Teacher
        </item>
    </string-array>
</resources>
