<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.application.pradyotprakash.attendance.AddDetails">


    <TextView
        android:id="@+id/branches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/branch" />

    <Spinner
        android:id="@+id/branchOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_branches"
        android:layout_alignTop="@+id/branches"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/branches" />

    <TextView
        android:id="@+id/subjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/classSemester"
        android:layout_marginTop="31dp"
        android:text="@string/subject" />

    <Spinner
        android:id="@+id/subjectsOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/branchOption"
        android:layout_alignStart="@+id/branchOption"
        android:layout_alignTop="@+id/subjects" />

    <TextView
        android:id="@+id/semesters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/branchOption"
        android:layout_marginTop="27dp"
        android:text="@string/semester" />

    <Spinner
        android:id="@+id/semesterOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_semesters"
        android:layout_alignStart="@+id/subjectsOption"
        android:layout_alignTop="@+id/semesters" />

    <Button
        android:id="@+id/addInforamtion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addStudent"
        android:layout_alignBottom="@+id/addStudent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="18dp"
        android:text="@string/add_details1" />

    <TextView
        android:id="@+id/teacherType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/teacher_type1" />

    <Spinner
        android:id="@+id/teacherTypeOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/teacherType"
        android:layout_toEndOf="@+id/teacherType"
        android:entries="@array/spinner_teacher_type" />

    <Button
        android:id="@+id/addStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="13dp"
        android:text="@string/add_student"
        android:visibility="visible" />

    <TextView
        android:id="@+id/classSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/semesterOptions"
        android:layout_marginTop="33dp"
        android:text="@string/class1"
        android:visibility="visible" />

    <EditText
        android:id="@+id/classNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/classSemester"
        android:layout_toEndOf="@+id/semesters"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="visible" />

</RelativeLayout>
