<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.application.pradyotprakash.attendance.StudentActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/check_your_attendance"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/studentUSN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/enter_your_usn"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="166dp" />

    <TextView
        android:id="@+id/branches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/studentUSN"
        android:layout_marginTop="42dp"
        android:text="@string/branch" />

    <Spinner
        android:id="@+id/branchOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_branches"
        android:layout_alignTop="@+id/branches"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/branches" />

    <TextView
        android:id="@+id/semesters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/branchOption"
        android:layout_marginTop="27dp"
        android:text="@string/semester" />

    <Spinner
        android:id="@+id/semesterOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkAttendance"
        android:layout_alignTop="@+id/semesters"
        android:entries="@array/spinner_semesters" />

    <TextView
        android:id="@+id/classSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/semesterOptions"
        android:layout_marginTop="33dp"
        android:text="@string/class1"
        android:visibility="visible" />

    <EditText
        android:id="@+id/classNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/semesterOptions"
        android:layout_alignTop="@+id/classSemester"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="visible" />

    <Button
        android:id="@+id/checkAttendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:background="@android:color/transparent"
        android:text="@string/my_attendance"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>
